fix: flex align for header

--- a/src/assets/css/blocks/_main-nav.scss
+++ b/src/assets/css/blocks/_main-nav.scss
@@ -15,8 +15,12 @@
     font-size: 24px;
     text-decoration: none;
     border-bottom: 2px solid transparent;
-    transition: border-color 0.2s ease-in;
+    transition: border-color 0.1s ease-in, opacity 0.1s ease-in;
     opacity: 0.7;
+    &:hover,
+    &:focus {
+      opacity: 1;
+    }
   }
   &__link--active {
     border-color: $color-accent;
