--- a/src/assets/css/partials/_header.scss
+++ b/src/assets/css/partials/_header.scss
@@ -1,11 +1,18 @@
 .page-header {
   display: flex;
+  justify-content: space-between;
   padding: 15px;
-  color: #fff;
+  color: #ffffff;
   background-color: rgba(#000000, 0.7);
+  &__logo {
+    flex-basis: 300px;
+  }
   &__nav {
-    display: flex;
-    justify-content: center;
-    flex-grow: 1;
+    margin: 0 10px;
+  }
+  &__order {
+    flex-basis: 300px;
+    align-self: center;
+    text-align: right;
   }
 }
